--- a/Voting App/styles.css
+++ b/Voting App/styles.css
@@ -47,6 +47,11 @@ body {
 .candidate1 {
   background-image: url(../image/edward.png);
   height: 100px;
+  width: 100px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 10px;
 }
 
 .vote_button {
