--- a/Voting App/styles.css
+++ b/Voting App/styles.css
@@ -14,9 +14,13 @@ body {
   background: #efefef;
 }
 
+#map {
+  background-color: white;
+}
+
 .vote_container {
   display: flex;
-  padding: 2px;
+  padding: 2px 20px;
   border: 10px solid black;
   flex-direction: column;
   align-items: center;
@@ -120,4 +124,5 @@ footer {
   font-size: 1.6rem;
   position: absolute;
   /* bottom: 10px; */
+  margin-top: 50px;
 }
