create span class for vote numbers. making it easier to target vote count

--- a/Voting App/styles.css
+++ b/Voting App/styles.css
@@ -108,7 +108,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 10px;
-  transition: all 3000ms ease-in-out;
+  transition: background-blend-mode 3000ms ease-in-out;
 }
 
 .candidate2:hover {
