highlight the clicked image by converting it to a black and white

--- a/Voting App/styles.css
+++ b/Voting App/styles.css
@@ -115,7 +115,7 @@ body {
   background-blend-mode: luminosity;
 }
 
-.display_candidates_blackNwhite {
+.display_blackNwhite {
   background-blend-mode: luminosity;
 }
 
