--- a/Voting App/styles.css
+++ b/Voting App/styles.css
@@ -138,3 +138,12 @@ footer {
   /* bottom: 10px; */
   margin-top: 50px;
 }
+
+.thumbUp {
+  position: fixed;
+  top: 50%;
+  z-index: 100;
+  background: #fff;
+  padding: 10px;
+  border-radius: 50%;
+}
