--- a/Voting App/styles.css
+++ b/Voting App/styles.css
@@ -139,7 +139,16 @@ footer {
   margin-top: 50px;
 }
 
-@keyframes pop-up {
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
   from {
     opacity: 1;
   }
@@ -158,6 +167,10 @@ footer {
   opacity: 0;
 }
 
-.fadeInOut {
-  animation: pop-up 1500ms;
+.fadeIn {
+  animation: fade-in 1500ms linear forwards;
+}
+
+.fadeOut {
+  animation: fade-out 1500ms linear forwards;
 }
